meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/cli/memfault_core_handler/snapshots/memfaultd__cli__memfault_core_handler__core_elf_memfault_note__test__serialize_debug_data.snap
---
source: memfaultd/src/cli/memfault_core_handler/core_elf_memfault_note.rs
expression: deser_capture_logs
---
Map(
    [
        (
            Text(
                "schema_version",
            ),
            Integer(
                Integer(
                    1,
                ),
            ),
        ),
        (
            Text(
                "capture_logs",
            ),
            Array(
                [
                    Text(
                        "Error 1",
                    ),
                    Text(
                        "Error 2",
                    ),
                    Text(
                        "Error 3",
                    ),
                ],
            ),
        ),
    ],
)
